yaml/traefik-web-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: traefik-web-ui
  namespace: default
spec:
  clusterIP: 10.107.91.51
  clusterIPs:
  - 10.107.91.51
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: traefik-ingress-lb
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
