yaml/traefik-web-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: traefik-web-ui
  namespace: default
spec:
  rules:
  - host: example.local
    http:
      paths:
      - backend:
          service:
            name: traefik-web-ui
            port:
              name: web
        path: /
        pathType: ImplementationSpecific
  tls:
  - secretName: traefik-ui-tls-cert
status:
  loadBalancer: {}
